# gpt-fast

./: .gitmodules  README.md  demo.py  pyproject.toml
src/compressor/: compressor_model.py
src/gptfast/: GPTQ.py  eval.py  generate.py  model.py  quantize.py  tp.py
